[gd_scene load_steps=7 format=3 uid="uid://c3lulywul4epa"]

[ext_resource type="Script" uid="uid://cg4xk70lq641c" path="res://Enemy/Boss1/Attacks/MissileAttack/Missile.gd" id="1_j83ya"]
[ext_resource type="Texture2D" uid="uid://b3aj2hs1p0hj1" path="res://Enemy/Boss1/Attacks/MissileAttack/Resources/Missile.png" id="1_n4tjf"]
[ext_resource type="Texture2D" uid="uid://bskfm08ynlq6d" path="res://Enemy/Boss1/Attacks/MissileAttack/Resources/Explosion.png" id="3_h387v"]
[ext_resource type="AudioStream" uid="uid://qr63ihjomjks" path="res://Enemy/Boss1/Attacks/MissileAttack/Resources/Explosion.mp3" id="4_hdnju"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j83ya"]
radius = 13.0
height = 92.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h387v"]
radius = 70.25

[node name="Missile" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_j83ya")

[node name="MissileSprite" type="Sprite2D" parent="."]
position = Vector2(-8, 5.960465e-08)
rotation = 1.1815879
scale = Vector2(0.6722965, 0.6713289)
texture = ExtResource("1_n4tjf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_j83ya")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(-7.6293945e-06, -1.9073486e-06)
scale = Vector2(0.28001276, 0.28001276)
texture = ExtResource("3_h387v")

[node name="ExplosionShape" type="ShapeCast2D" parent="."]
visible = false
enabled = false
shape = SubResource("CircleShape2D_h387v")
target_position = Vector2(0, 0)

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hdnju")
volume_db = -10.0

[node name="ExplosionLingerTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="die"]
